objects/Supply__c.object
<CustomObject>
    <fields>
        <fullName>Item_Name__c</fullName>
        <label>Item Name</label>
        <referenceTo>Inventory__c</referenceTo>
        <relationshipLabel>Supply</relationshipLabel>
        <relationshipName>Supply</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <formula>Item_Name__r.Rate__c  *  Supply_Items__c</formula>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Supply_Items__c</fullName>
        <label>Supply Items</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Rate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unit Rate</label>
        <referenceTo>Inventory__c</referenceTo>
        <relationshipLabel>Supply (Unit Rate)</relationshipLabel>
        <relationshipName>Supply1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Supply</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SID - {0000}</displayFormat>
        <label>SupplyOrderNo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supply</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Instock_Inventory</fullName>
        <active>true</active>
        <errorConditionFormula>IF ( ISNEW(),
Supply_Items__c &gt;  Item_Name__r.Quantity__c,
IF ( Supply_Items__c &gt; PRIORVALUE(Supply_Items__c),False,
Item_Name__r.Quantity__c &gt; (Supply_Items__c -PRIORVALUE(Supply_Items__c))))</errorConditionFormula>
        <errorDisplayField>Supply_Items__c</errorDisplayField>
        <errorMessage>Items supplied can not be more than inventory</errorMessage>
    </validationRules>
</CustomObject>